# neural-interactive-proofs

./: .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cv_benchmark.sh  gen_cv_data_test.sh  gen_cv_data_train.sh  models.csv  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
doc/: conf.py  glossary.rst  index.md  index.rst  references.bib  splash.md
nip/: __init__.py  artifact_logger.py  base_run.py  constants.py  experiment_settings.py  factory.py  message_regression.py  model_cache.py  rl_objectives.py  run.py  scenario_instance.py
playground/: apps_benchmarking.ipynb  benchmarking.ipynb  farai-work-trial-plots.ipynb  fine_tune_dataset-prompt-removed.jsonl  fine_tune_dataset.jsonl  gi-dataset.ipynb  gi_agent_testing.ipynb  gi_dataset.ipynb  gi_mappo.ipynb  gin.ipynb  gin_testing.ipynb  image_classification.ipynb  logging_episodes.ipynb  moderarion.ipynb  moderation.ipynb  moderation2.ipynb  plots.ipynb  pretrained_inference.ipynb  rollout_visualisation.ipynb  run_profile.ipynb  testing_pvg.ipynb  torch_geometric.ipynb  torchrl_issues.ipynb
pvg/: __init__.py  artifact_logger.py  base_run.py  constants.py  experiment.py  experiment_settings.py  factory.py  global_state.py  message_regression.py  model_cache.py  parameters.py  protocols.py  rl_objectives.py  run.py  scenario_instance.py  stat_logger.py
results/: gi_solo_agents.ipynb  rollout_visualisation.ipynb
scripts/: analyse_cv_rollouts.py  create_cv_dataset.py  create_gi_dataset.py  cv_benchmark.py  download_all_datasets.py  (+15 more)
(+413 files in other folders)
