[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nip"
version = "0.1.0"
requires-python = ">= 3.11"

[tool.black]
extend-exclude = "nip/utils/runtime_module.py"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "playground",
    "nip/utils/runtime_module.py",
    "nip/utils/apps_metric.py"
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes print statement checker.
select = ["E4", "E7", "E9", "F", "T20", "D"]
ignore = ["F401", "F722", "E731", "E712", "F821", "F541", "D202", "D105"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

exclude = [
    "docker/*",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
]
exclude = [  # don't report on objects that match any of these regex
    'wandb',
]